--- a/env/src/css/scaffolding.css
+++ b/env/src/css/scaffolding.css
@@ -28,5 +28,4 @@ body {
   position     : relative;
   margin-left  : auto;
   margin-right : auto;
-  width        : 640px; /* 960px; */
 }
